2012-05-10  Thomas Schwinge  <thomas@schwinge.name>

	* hurd/lookup-retry.c (__hurd_file_name_lookup_retry): Use
	__strtoul_internal rather than strtoul.

2012-05-10  Pino Toscano  <toscano.pino@tiscali.it>

	* hurd/hurdsock.c (_hurd_socket_server): Check for negative domains,
	and reject them.

2012-05-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/hurd/setresgid.c (__setresgid): Handle the -1 case,
	which preserves existing values.
	* sysdeps/mach/hurd/setresuid.c (__setresuid): Likewise.

2012-05-10  Pino Toscano  <toscano.pino@tiscali.it>

	* hurd/hurdselect.c (_hurd_select): Return EINVAL for negative
	TIMEOUT values.  Return EINVAL for NFDS values either negative or
	greater than FD_SETSIZE.

2012-05-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/hurd/brk.c (_hurd_set_brk): When more space needs to be
	allocated, call __vm_protect to finish enabling the existing space, and
	pass a copy of _hurd_data_end instead of PAGEBRK to __vm_allocate to
	allocate the remainder.

2012-05-10  Pino Toscano  <toscano.pino@tiscali.it>

	* sysdeps/mach/hurd/recvfrom.c (__recvfrom): Check also for a null
	address port.  Set ADDR_LEN to 0 when not filling ADDRARG.

2012-05-10  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* sysdeps/mach/hurd/readlinkat.c: New file, heavily derived from
	sysdeps/mach/hurd/readlink.c.

	* posix/tst-sysconf.c (posix_options): Only use
	_POSIX_PRIORITIZED_IO, _POSIX_PRIORITY_SCHEDULING, and
	_POSIX_SYNCHRONIZED_IO when they are defined
	* sysdeps/mach/hurd/bits/posix_opt.h:
	(_POSIX_PRIORITY_SCHEDULING): Undefine macro.
	(_XOPEN_REALTIME): Undefine macro.
	(_XOPEN_REALTIME_THREADS): Undefine macro.
	(_XOPEN_SHM): Undefine macro.
	[__USE_XOPEN2K8] (_POSIX_THREAD_ROBUST_PRIO_INHERIT): Define
	macro to -1.
	[__USE_XOPEN2K8] (_POSIX_THREAD_ROBUST_PRIO_PROTECT): Define
	macro to -1.
	(_POSIX_ASYNC_IO): Undefine macro.
	(_POSIX_PRIORITIZED_IO): Undefine macro.
	(_POSIX_SPIN_LOCKS): Define macro to -1.
